@@ -1,6 +1,7 @@
 package com.kirisamemarisa.blog.controller;
 
 import com.kirisamemarisa.blog.common.ApiResponse;
+import com.kirisamemarisa.blog.dto.PageResult;
 import com.kirisamemarisa.blog.dto.UserSearchDTO;
 import com.kirisamemarisa.blog.model.User;
 import com.kirisamemarisa.blog.model.UserProfile;
@@ -29,23 +30,28 @@ public class UserSearchController {
     }
 
     @GetMapping("/api/users/search")
-    public ApiResponse<List<UserSearchDTO>> search(
+    public ApiResponse<PageResult<UserSearchDTO>> search(
             @RequestParam(required = false) String username,
-            @RequestParam(required = false) String nickname) {
+            @RequestParam(required = false) String nickname,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
 
         List<Object[]> list;
+        long total;
         if (username != null && !username.isBlank()) {
-            list = userSearchService.searchByUsernameWithProfile(username);
+            list = userSearchService.searchByUsernameWithProfile(username, page, size);
+            total = userSearchService.countByUsername(username);
         } else if (nickname != null && !nickname.isBlank()) {
-            list = userSearchService.searchByNicknameWithProfile(nickname);
+            list = userSearchService.searchByNicknameWithProfile(nickname, page, size);
+            total = userSearchService.countByNickname(nickname);
         } else {
             return new ApiResponse<>(400, "参数缺失：需提供 username 或 nickname", null);
         }
 
         List<UserSearchDTO> dtoList = list.stream()
                 .map(arr -> UserSearchMapper.toDTO((User) arr[0], (UserProfile) arr[1]))
-                .collect(Collectors.toList());
+                .toList();
 
-        return new ApiResponse<>(200, "OK", dtoList);
+        return new ApiResponse<>(200, "OK", new PageResult<>(dtoList, total, page, size));
     }
 }
